[gd_scene load_steps=14 format=3 uid="uid://btwdqw4lybd0n"]

[ext_resource type="Texture2D" uid="uid://dvhtub83i4w84" path="res://enemys/flame_bat/flame_bat.png" id="1_202ir"]
[ext_resource type="Script" path="res://enemys/flame_bat/flame_bat.gd" id="1_hg3xi"]
[ext_resource type="Texture2D" uid="uid://b3ulb8wa56x3j" path="res://enemys/flame_bat/health_bar_under.png" id="3_vbr6l"]
[ext_resource type="Texture2D" uid="uid://vv7oh0dms7ro" path="res://enemys/flame_bat/health_bar - progress.png" id="4_3qsfn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bby73"]
size = Vector2(31, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dod0r"]
size = Vector2(25, 20)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mdodr"]
radius = 9.0
height = 18.0

[sub_resource type="AtlasTexture" id="AtlasTexture_6vsxp"]
atlas = ExtResource("1_202ir")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b18qu"]
atlas = ExtResource("1_202ir")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_va6ss"]
atlas = ExtResource("1_202ir")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3xnd"]
atlas = ExtResource("1_202ir")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_r7q14"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vsxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b18qu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va6ss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3xnd")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_f34ru"]
radius = 317.208

[node name="flame_bat" type="CharacterBody2D"]
position = Vector2(-2, 3)
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_hg3xi")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="atk_timer" type="Timer" parent="."]

[node name="atk_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="atk_area"]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_bby73")

[node name="hurt_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurt_area"]
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_dod0r")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_mdodr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_r7q14")
animation = &"walk"
frame_progress = 0.151949

[node name="health_bar" type="TextureProgressBar" parent="."]
offset_left = -16.0
offset_top = -31.0
offset_right = 20.0
offset_bottom = -2.0
size_flags_vertical = 0
max_value = 30.0
value = 30.0
texture_under = ExtResource("3_vbr6l")
texture_progress = ExtResource("4_3qsfn")

[node name="shoot_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="shoot_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="shoot_area"]
shape = SubResource("CircleShape2D_f34ru")

[node name="shoot_position" type="Marker2D" parent="."]
position = Vector2(-17, 3)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="atk_timer" to="." method="_on_atk_timer_timeout"]
[connection signal="area_entered" from="atk_area" to="." method="_on_atk_area_area_entered"]
[connection signal="area_exited" from="atk_area" to="." method="_on_atk_area_area_exited"]
[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]
[connection signal="area_entered" from="shoot_area" to="." method="_on_shoot_area_area_entered"]
[connection signal="area_exited" from="shoot_area" to="." method="_on_shoot_area_area_exited"]
